--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "expo": "~40.0.0",
+    "expo-image-editor": "^1.6.3",
     "expo-image-picker": "~9.2.0",
     "expo-media-library": "~10.0.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-gesture-handler": "~1.8.0",
     "react-native-paper": "^4.9.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-screens": "~2.15.0",
